--- a/website/package.json
+++ b/website/package.json
@@ -62,5 +62,8 @@
     "tsm": "^2.2.1",
     "typescript": "4.1.3",
     "unified": "10.1.2"
+  },
+  "resolutions": {
+    "esbuild-plugin-css-modules/rm/mocha/yargs/cliui/strip-ansi/ansi-regex": "5.0.1"
   }
 }
